--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Auto Repair Services</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Mechanic Geelong - Trusted and Reliable Car Repair and Service</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/lux/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Hero Section -->
   <section class="bg-light text-center py-5">
     <div class="container">
-      <h1 class="display-4">Fast, Reliable Auto Repair Services</h1>
-      <p class="lead">Get your car back on the road in no time with our expert mechanics.</p>
+      <h1 class="display-5">Mechanic Geelong, by Talyer Auto: Fast, Reliable Auto Repair Services, with a Free Car Inspection!</h1>
+      <p class="lead">Get your car back on the road quickly with our expert <strong>Geelong mechanic</strong> services. Reliable <strong>car repairs in Geelong</strong> are just a call or click away!</p>
+
       <form class="row g-2 justify-content-center mt-4">
         <div class="col-md-4">
           <input type="text" class="form-control" placeholder="Your Name" required>
@@ -20,17 +21,31 @@
           <input type="email" class="form-control" placeholder="Your Email" required>
         </div>
         <div class="col-md-2">
-          <button class="btn btn-primary btn-lg">Get a Free Quote</button>
+          <button class="btn btn-primary btn-lg">Claim Your Free Car Inspection</button>
         </div>
       </form>
       <img src="hero-car.jpg" alt="Hero Image" class="img-fluid mt-4">
     </div>
   </section>
 
+  <!-- Intro Section -->
+  <section class="py-5 bg-white">
+	<div class="container text-center">
+		<h2>Expert Car Repair and Mechanic Services in Geelong</h2>
+		<p>If you're in need of a car mechanic in Geelong, <strong>Mechanic Geelong</strong>, by Talyer Auto, has you covered. Our experienced team is here to provide fast, reliable service for all your car needs.</p>
+
+		<p>Car repairs in Geelong are no longer a hassle when you choose us. We offer affordable, high-quality repairs, ensuring your vehicle runs smoothly for years to come.</p>
+
+		<p>Looking for an auto mechanic in Geelong? Our professional team specializes in everything from routine maintenance to complex repairs, delivering exceptional service every time.</p>
+
+		<p>When it comes to car service in Geelong, we take pride in offering comprehensive services tailored to your vehicle's needs. Trust us for expert maintenance and repairs that keep your car in top shape.</p>
+	</div>
+  </section>
+  
   <!-- Social Proof Section -->
   <section class="py-5 bg-white">
     <div class="container text-center">
-      <h2>Trusted by Thousands of Happy Drivers</h2>
+      <h2>Our Geelong mechanics can handle everything from oil changes to car repairs in Geelong, including complex engine repairs.</h2>
       <p>"Best service ever! My car feels brand new." - John D.</p>
       <div class="d-flex justify-content-center gap-3 mt-3">
         <img src="badge1.png" alt="Award 1" class="img-fluid" style="max-width: 100px;">
@@ -40,32 +55,86 @@
     </div>
   </section>
 
-  <!-- Problem Section -->
-  <section class="bg-light py-5">
-    <div class="container text-center">
-      <h2>Car Trouble?</h2>
-      <p class="lead">Is your car making strange noises or not running as it should?</p>
-      <p>Don’t wait! Small issues can become big problems if left unchecked.</p>
+<!-- Problem Section -->
+<section class="bg-light py-5">
+  <div class="container text-center">
+    <h2>Is This You?</h2>
+    <p class="lead">Is your car struggling to start on cold mornings? Hearing strange noises from your brakes? Or maybe you're worried about hidden issues that could turn into something bigger?</p>
+    <p>Don't wait! Small issues can become big problems if left unchecked. Every delay could be a costly, dangerous problem waiting to happen.</p>
+  </div>
+  
+  <!-- Problems and Solutions Table -->
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <h4>Struggling to Start?</h4>
+        <p>Battery failures can leave you stranded and frustrated.</p>
+        <p>We’ll test and replace your battery to keep you moving.</p>
+      </div>
+      <div class="col-md-4">
+        <h4>Hearing Strange Noises?</h4>
+        <p>Brake issues reduce your stopping power and safety.</p>
+        <p>We’ll inspect and replace worn-out parts to restore full function.</p>
+      </div>
+      <div class="col-md-4">
+        <h4>Worried About Hidden Issues?</h4>
+        <p>Unknown problems can worsen over time, leading to costly repairs.</p>
+        <p>We offer comprehensive inspections to catch issues early.</p>
+      </div>
     </div>
-  </section>
-
-  <!-- Solution Section -->
-  <section class="py-5 bg-white">
-    <div class="container text-center">
-      <h2>We’ve Got You Covered</h2>
-      <p class="lead">Our certified mechanics can handle everything from oil changes to engine repairs.</p>
+  </div>
+  
+  <!-- Features Section -->
+  <section class="bg-light py-5">
+	<div class="container text-center">
+	  <h2>Get Your Free Car Inspection – Enjoy Peace of Mind with Key Safety Checks</h2>
+	  <div class="row text-center">
+		<div class="col-md-4">
+		  <h4>Comprehensive Check-Up</h4>
+		  <p>Inspecting engine performance, fluid levels, and more.</p>
+		  <p>We’ll identify any immediate issues to keep your car running smoothly.</p>
+		</div>
+		<div class="col-md-4">
+		  <h4>Brake & Tire Safety</h4>
+		  <p>Brake pad wear and tire pressure can impact your safety on the road.</p>
+		  <p>We’ll check your brakes and tires to ensure they’re in top condition.</p>
+		</div>
+		<div class="col-md-4">
+		  <h4>Battery Health</h4>
+		  <p>Battery failures can leave you stranded at the worst time.</p>
+		  <p>We’ll test and replace your battery to keep you moving.</p>
+		</div>
+	  </div>
+	  <div class="row text-center">
+		<div class="col-md-4">
+		  <h4>Fluid Level Inspection</h4>
+		  <p>Proper fluid levels are essential for engine health.</p>
+		  <p>We’ll check and top-up your fluids to keep your car running efficiently.</p>
+		</div>
+		<div class="col-md-4">
+		  <h4>Alignment & Suspension Check</h4>
+		  <p>Poor alignment can cause uneven tire wear and affect your driving.</p>
+		  <p>We’ll inspect your alignment and suspension to ensure smooth handling.</p>
+		</div>
+		<div class="col-md-4">
+		  <h4>Free Consultation</h4>
+		  <p>Not sure what your car needs? We’ll explain any issues and suggest next steps.</p>
+		  <p>Get expert advice with no obligation to proceed.</p>
+		</div>
+	  </div>
+      <p class="lead">Our mechanics can handle everything from oil changes to engine repairs.</p>
       <ul class="list-unstyled">
         <li>✔️ Comprehensive diagnostics</li>
         <li>✔️ Affordable pricing</li>
         <li>✔️ Same-day service available</li>
       </ul>
-    </div>
+	</div>
   </section>
-
+  
   <!-- Features Section -->
   <section class="bg-light py-5">
     <div class="container text-center">
-      <h2>Why Choose Us?</h2>
+      <h2>Why Choose Mechanic Geelong?</h2>
       <div class="row mt-4">
         <div class="col-md-4">
           <h4>Experienced Mechanics</h4>
@@ -85,8 +154,12 @@
 
   <!-- Offer/CTA Section -->
   <section class="py-5 bg-primary text-white text-center">
-    <div class="container">
+	  <div class="container text-center mt-5">
       <h2>Book Your Service Today and Get a Free Inspection!</h2>
+	  <!-- Call to Action Section -->
+		<p>Don’t risk your safety or your wallet. At Mechanic Geelong, operated by Talyer Auto, our expert mechanics are here to fix those hidden issues before they turn into something bigger. From logbook servicing to pre-purchase inspections, we’ve got you covered.</p>
+		<a href="#contact" class="btn btn-primary">Contact Us Now</a>
+	  </div>
       <form class="row g-2 justify-content-center mt-4">
         <div class="col-md-4">
           <input type="text" class="form-control" placeholder="Your Name" required>
@@ -95,7 +168,7 @@
           <input type="email" class="form-control" placeholder="Your Email" required>
         </div>
         <div class="col-md-2">
-          <button class="btn btn-light btn-lg">Schedule Now</button>
+          <button class="btn btn-light btn-lg">Claim Your Free Car Inspection</button>
         </div>
       </form>
     </div>
