--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/lux/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+  <!-- Header Section -->
+	<header class="bg-dark text-white py-2">
+	  <div class="container d-flex justify-content-between align-items-center">
+		<div>
+		  <h5>Mechanic Geelong, by Talyer Auto</h5>
+		  <p>Reliable Auto Repair Services in Geelong</p>
+		</div>
+		<div class="d-flex flex-column align-items-end">
+		  <p class="mb-0">Address: 16 Hume Reserve Ct, Bell Park VIC 3215</p>
+		  <p class="mb-0 me-3">Phone: <strong>0480 582 888</strong></p>
+		  <p class="mb-0">Email: <strong><a href="mailto:booking@geelong-mechanic.com.au" class="text-white">booking@geelong-mechanic.com.au</a></strong></p>
+		</div>
+	  </div>
+	</header>
+  
   <!-- Hero Section -->
   <section class="bg-light text-center py-5">
     <div class="container">
