--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
   <!-- Footer Section -->
   <footer class="bg-dark text-white text-center py-3">
-    <p>© 2025 Your Auto Repair Shop | <a href="#" class="text-white">Privacy Policy</a> | <a href="#" class="text-white">Terms of Service</a></p>
+    <p>© 2025 Talyer Auto Geelong | <a href="#" class="text-white">Privacy Policy</a> | <a href="#" class="text-white">Terms of Service</a></p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
